--- a/work/feelp2-wsl/src.inria98web/exec/Makefile
+++ b/work/feelp2-wsl/src.inria98web/exec/Makefile
@@ -1,3 +1,3 @@
-CFLAGS = $(ADDITIONALCFLAGS)
+CFLAGS = -g -fno-builtin $(ADDITIONALCFLAGS)
 feel: feel.o basic_libraries.o StrEq.o strindex.o
 	cc  -o feel feel.o basic_libraries.o StrEq.o strindex.o
