Clean up prototypes, includes, and buffer types for 64-bit build

--- a/work/feelp2-wsl/src.inria98web/yacc/Makefile
+++ b/work/feelp2-wsl/src.inria98web/yacc/Makefile
@@ -1,2 +1,2 @@
 CFLAGS =  $(ADDITIONALCFLAGS)
-yacc.a :yacc.a(YaccExpression.o) yacc.a(YaccMain.o) yacc.a(expression_term.o) yacc.a(lex.yy.o) yacc.a(fem.tab.o) 
+yacc.a :yacc.a(yyerror.o) yacc.a(YaccExpression.o) yacc.a(YaccMain.o) yacc.a(expression_term.o) yacc.a(lex.yy.o) yacc.a(fem.tab.o) yacc.a(yylineno.o)
